# gl-streaming

./: .gitignore  local.properties
android_gl_server/: import-summary.txt  local.properties
android_gl_server/app/: build.gradle
android_gl_server/app/src/main/: AndroidManifest.xml
android_gl_server/app/src/main/java/com/kdt/glstreamserver/: GLStreamingActivity.java
android_gl_server/app/src/main/jni/: Android.mk  CMakeLists.txt
android_gl_server/gradle/wrapper/: gradle-wrapper.properties
common/: glsurfaceview_utils.h  server.c
gl_client/: Makefile  cscope.files  glclient.c  tags
gl_client/egl_test/: Makefile  egl_test.c
gl_client/samples/: Makefile  sample1  sample1.c  sample2  sample2.c
gl_server/: Makefile  gl_server  glcontrol.c  glserver.c  main.c  tags
